--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" ng-app="testApp">
     <head>
         <meta charset="UTF-8">
-        <title>Exercice 7</title>
+        <title>Exercice 3</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
         <script src="assets/js/script.js"></script>
@@ -14,7 +14,7 @@
       <th>marque</th>
       <th>couleur</th>
     </thead>
-    <tr ng-repeat="car in cars | orderBy: '+brand' | filter: 'verte'">
+    <tr ng-repeat="car in cars | orderBy: '+brand' | filter: {couleur: 'verte'}">
       <td>
         {{car.brand}}
       </td>
